--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Dec 02 15:32:21 EST 2025
-sdk.dir=/Users/sagan/Library/Android/sdk
+#Wed Dec 03 18:48:32 EST 2025
+sdk.dir=C\:\\Users\\eduan\\AppData\\Local\\Android\\Sdk
