--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Dec 04 20:01:08 EST 2025
-sdk.dir=/Users/jeffsu/Library/Android/sdk
+#Thu Dec 04 22:55:16 EST 2025
+sdk.dir=C\:\\Users\\eduan\\AppData\\Local\\Android\\Sdk
